--- a/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
+++ b/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
@@ -137,7 +137,7 @@
         </fieldset>
     </form>
     <div class="cart-collaterals">
-<!--         <div class="col2-set">
+         <div class="col2-set">
             <div class="col-1">
                 <?php echo $this->getChildHtml('crosssell') ?>
             </div>
@@ -147,7 +147,7 @@
                 <?php echo $this->getChildHtml('coupon') ?>
                 <?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
             </div>
-        </div> -->
+        </div> 
         <div class="totals">
             <?php echo $this->getChildHtml('totals'); ?>
             <?php if(!$this->hasError()): ?>
