--- a/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
+++ b/design/frontend/vt-supershop/bdb/template/checkout/cart.phtml
@@ -145,7 +145,7 @@
                 <?php /* Extensions placeholder */ ?>
                 <?php echo $this->getChildHtml('checkout.cart.extra') ?>
                 <?php echo $this->getChildHtml('coupon') ?>
-                <?php if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
+                <?php //if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
             </div>
         </div> 
         <div class="totals">
