修改首页分类列表显示bug
修改首页分类列表显示bug

--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -92,10 +92,10 @@ $home = '';
 <?php endif; ?>
 <script type="text/javascript">                
      jQuery(document).ready(function($){ 
-     	var w = $(window).width(); 
-     	if(w < 1024){     	
-     		$(".mega-nav").hide();
-     	}
+     	// var w = $(window).width(); 
+     	// if(w < 1024){     	
+     	// 	$(".mega-nav").hide();
+     	// }
      	<?php if($isHomepage != 'home' && $isHomepage != 'home-02'){ ?>		                        
        		$(".mega-nav").hide();
        <?php }?>
