--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -96,7 +96,7 @@ $home = '';
      	// if(w < 1024){     	
      	// 	$(".mega-nav").hide();
      	// }
-
+     	$(".mega-nav").hide();
         $('.vertical-menu .title-menu').click(function(){        	
             $(".mega-nav").slideToggle("fast");
         });         
@@ -172,6 +172,7 @@ $home = '';
      	// if(w <= 1024){
      	// 	$(".mega-nav").hide();
      	// }
+     	$(".mega-nav").hide();
      	<?php if($isHomepage != 'home' && $isHomepage != 'home-02'){ ?>		                        
        		$(".mega-nav").hide();
        <?php }?>
