修改首页分类显示bug
修改首页分类显示bug

--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -96,10 +96,10 @@ $home = '';
      	// if(w < 1024){     	
      	// 	$(".mega-nav").hide();
      	// }
-     	$(".mega-nav").hide();
-        $('.vertical-menu .title-menu').click(function(){        	
-            $(".mega-nav").slideToggle("fast");
-        });         
+
+        // $('.vertical-menu .title-menu').click(function(){        	
+        //     $(".mega-nav").slideToggle("fast");
+        // });         
     });
 </script>
 
@@ -172,13 +172,12 @@ $home = '';
      	// if(w <= 1024){
      	// 	$(".mega-nav").hide();
      	// }
-     	$(".mega-nav").hide();
      	<?php if($isHomepage != 'home' && $isHomepage != 'home-02'){ ?>		                        
        		$(".mega-nav").hide();
        <?php }?>
-        $('.vertical-menu .title-menu').click(function(){        	
-            $(".mega-nav").slideToggle("fast");
-        });         
+        // $('.vertical-menu .title-menu').click(function(){        	
+        //     $(".mega-nav").slideToggle("fast");
+        // });         
     });
 </script>
 
