--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -92,14 +92,16 @@ $home = '';
 <?php endif; ?>
 <script type="text/javascript">                
      jQuery(document).ready(function($){ 
-     	// var w = $(window).width(); 
-     	// if(w < 1024){     	
-     	// 	$(".mega-nav").hide();
-     	// }
-
-        // $('.vertical-menu .title-menu').click(function(){        	
-        //     $(".mega-nav").slideToggle("fast");
-        // });         
+     	var w = $(window).width(); 
+     	if(w < 1024){     	
+     		$(".mega-nav").hide();
+     	}
+     	<?php if($isHomepage != 'home' && $isHomepage != 'home-02'){ ?>		                        
+       		$(".mega-nav").hide();
+       <?php }?>
+        $('.vertical-menu .title-menu').click(function(){        	
+            $(".mega-nav").slideToggle("fast");
+        });         
     });
 </script>
 
@@ -168,14 +170,16 @@ $home = '';
 <?php endif; ?>
 <script type="text/javascript">                
      jQuery(document).ready(function($){ 
-     	// var w = $(window).width();
-     	// if(w <= 1024){
-     	// 	$(".mega-nav").hide();
-     	// }
-     	
-        // $('.vertical-menu .title-menu').click(function(){        	
-        //     $(".mega-nav").slideToggle("fast");
-        // });         
+     	var w = $(window).width();
+     	if(w <= 1024){
+     		$(".mega-nav").hide();
+     	}
+     	<?php if($isHomepage != 'home' && $isHomepage != 'home-02'){ ?>		                        
+       		$(".mega-nav").hide();
+       <?php }?>
+        $('.vertical-menu .title-menu').click(function(){        	
+            $(".mega-nav").slideToggle("fast");
+        });         
     });
 </script>
 
