--- a/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
@@ -386,8 +386,6 @@ if($var_vttheme->getParam('menu_ontop')==1){
 		menu_offset_top = 500;
 	}
 
-	
-
 	if ((ishome != 'home') ||(ishome != 'home-04')){
 		menu_offset_top = $('#box-header').outerHeight();
 	}
@@ -404,6 +402,31 @@ if($var_vttheme->getParam('menu_ontop')==1){
 		menu_offset_top = $('.box-header-02').outerHeight();
 	}
 
+	function processScroll() {
+		var scrollTop = $( window ).scrollTop();
+		if ( scrollTop >= menu_offset_top) {
+			if(layout == 3){
+				$('.box-header-02').addClass('subnav-fixed');
+			}else{
+				$('#vt_menu').addClass('subnav-fixed');
+			}
+		}
+		else if (scrollTop <= menu_offset_top) {		
+			if(layout == 3){
+				$('.box-header-02').removeClass('subnav-fixed');
+			}else{
+				$('#vt_menu').removeClass('subnav-fixed');
+			}
+		}
+	}
+
+	$( window ).scroll(function() {
+		processScroll();
+	}); 
+
+ 	if(w < 1024){
+ 		$(".mega-nav").css('display','none');
+ 	}
 
 });
 </script>
