修改首页分类显示bug
修改首页分类显示bug

--- a/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
@@ -379,7 +379,6 @@ if($var_vttheme->getParam('menu_ontop')==1){
 ?>
 <script type="text/javascript">                
  	jQuery(document).ready(function($){
- 		$('ul.mega-nav').css('display', 'none');
 		var ishome="<?php echo Mage::getSingleton('cms/page')->getIdentifier(); ?>";	
 		var layout = "<?php echo $var_vttheme->getParam('layout_home'); ?>";	
 		var w = $(window).width(); 
@@ -411,6 +410,7 @@ if($var_vttheme->getParam('menu_ontop')==1){
 				}else{
 					$('#vt_menu').addClass('subnav-fixed');
 				}
+				$('.mega-nav').hide();
 			}
 			else if (scrollTop <= menu_offset_top) {		
 				if(layout == 3){
