--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -119,7 +119,7 @@ $home = '';
 		<span class="btn-menu"></span>		
 		</h2>
 <?php } ?>	
-	<ul class="<?php if($theme !='vertical'){ ?> mainnav <?php }?> mega-nav">
+	<ul class="<?php if($theme !='vertical'){ ?> mainnav <?php }?> mega-nav" style="display: none;">
 	<?php
 	$i = 0;
 	foreach($itemsStartLv as $itemStartLv){
