--- a/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
@@ -405,12 +405,13 @@ if($var_vttheme->getParam('menu_ontop')==1){
 		function processScroll() {
 			var scrollTop = $( window ).scrollTop();
 			if ( scrollTop >= menu_offset_top) {
+				$('.mega-nav').hide();
+				$('.mega-nav').css('display', 'none');
 				if(layout == 3){
 					$('.box-header-02').addClass('subnav-fixed');
 				}else{
 					$('#vt_menu').addClass('subnav-fixed');
 				}
-				$('.mega-nav').hide();
 			}
 			else if (scrollTop <= menu_offset_top) {		
 				if(layout == 3){
