修改首页分类显示bug
修改首页分类显示bug

--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -133,8 +133,12 @@ $home = '';
 				$('.mega-nav').css('display', 'none');
 				if(layout == 3){
 					$('.box-header-02').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}else{
 					$('#vt_menu').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}
 			}
 			else if (scrollTop <= menu_offset_top) {		
@@ -229,6 +233,7 @@ $home = '';
      	<?php if($isHomepage != 'home' && $isHomepage != 'home-02'){ ?>		                        
        		$(".mega-nav").hide();
        <?php }?>
+
         $('.vertical-menu .title-menu').click(function(){        	
             $(".mega-nav").slideToggle("fast");
         });         
@@ -263,8 +268,12 @@ $home = '';
 				$('.mega-nav').css('display', 'none');
 				if(layout == 3){
 					$('.box-header-02').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}else{
 					$('#vt_menu').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}
 			}
 			else if (scrollTop <= menu_offset_top) {		
@@ -388,8 +397,12 @@ $home = '';
 				$('.mega-nav').css('display', 'none');
 				if(layout == 3){
 					$('.box-header-02').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}else{
 					$('#vt_menu').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}
 			}
 			else if (scrollTop <= menu_offset_top) {		
