--- a/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/html/header.phtml
@@ -409,8 +409,12 @@ if($var_vttheme->getParam('menu_ontop')==1){
 				$('.mega-nav').css('display', 'none');
 				if(layout == 3){
 					$('.box-header-02').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}else{
 					$('#vt_menu').addClass('subnav-fixed');
+					$('.mega-nav').hide();
+					$('.mega-nav').css('display', 'none');
 				}
 			}
 			else if (scrollTop <= menu_offset_top) {		
