--- a/design/frontend/vt-supershop/bdb/template/catalog/product/compare/sidebar.phtml
+++ b/design/frontend/vt-supershop/bdb/template/catalog/product/compare/sidebar.phtml
@@ -30,7 +30,7 @@ $_helper = $this->helper('catalog/product_compare');
 $_items = $_helper->getItemCount() > 0 ? $_helper->getItemCollection() : null;
 ?>
 <div class="block block-compare">
-    <div class="block-title">        
+<!--     <div class="block-title">        
         <?php if($_helper->getItemCount() > 0){ ?>
         <strong><span><?php echo $this->__('Compare Products') ?>
             <?php if($_helper->getItemCount() > 0): ?> 
@@ -60,5 +60,5 @@ $_items = $_helper->getItemCount() > 0 ? $_helper->getItemCollection() : null;
     <?php else: ?>
         <p class="empty"><?php echo $this->__('You have no items to compare.') ?></p>
     <?php endif; ?>
-    </div>
+    </div> -->
 </div>
