修改首页二级分类位置
修改首页二级分类位置

--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -246,12 +246,12 @@ $home = '';
 <script type="text/javascript">
 	$('li.parent').each(function(index){
 		if(index > 1){
-			height = $(this).find('div.submenu').height();
-			move = index * 40 - height / 4 + "px";
+			height = $(this).find('div.have-spetitle').height();
+			move = index * 40 - height / 4 - 20 + "px";
 		}
 		else{
 			move = index * 40 + "px";
 		}
-		$(this).find('div.submenu').css('top', move);
+		$(this).find('div.have-spetitle').css('top', move);
 	});
 </script>
