修改首页二级分类标签位置
修改首页二级分类标签位置

--- a/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/megamenu/megamenu.phtml
@@ -244,7 +244,7 @@ $home = '';
 <!--end layout home-03-->
 
 <script type="text/javascript">
-	$('li.parent').each(function(index){
+	$('li.level0').each(function(index){
 		if(index > 1){
 			height = $(this).find('div.have-spetitle').height();
 			move = index * 40 - height / 4 - 20 + "px";
