--- a/design/frontend/vt-supershop/bdb/template/vt/productsconfig/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/productsconfig/default.phtml
@@ -124,7 +124,7 @@ if ($imgWidth <= 0 || $imgHeight <= 0){
             pagination: false,
             slideSpeed : 800,
             addClassActive: true,
-            scrollPerPage: false,
+            scrollPerPage: true,
             touchDrag: false,
 			afterAction: function (e) {
 			    if(this.$owlItems.length > this.options.items){
