--- a/design/frontend/vt-supershop/bdb/template/page/1column.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/1column.phtml
@@ -44,6 +44,7 @@ global $var_vttheme;
     $ls=  $var_vttheme->getParam('layoutfb'); 
 ?>
     <body class="<?php echo 'layoutfb'.$ls.' '; echo "home-0".$l; echo $this->getBodyClass(); echo ' '.$var_vttheme->template; ?>" >
+            <div id="wechat" style="background-color:red; width:50px; height:30px; position: fixed; right:20px; top:500px;"></div>
         <?php echo $this->getChildHtml('after_body_start') ?>
         <div  id="box-wrapper">
             <?php echo $this->getChildHtml('global_notices') ?>
