微信公众号广告

--- a/design/frontend/vt-supershop/bdb/template/page/1column.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/1column.phtml
@@ -44,7 +44,15 @@ global $var_vttheme;
     $ls=  $var_vttheme->getParam('layoutfb'); 
 ?>
     <body class="<?php echo 'layoutfb'.$ls.' '; echo "home-0".$l; echo $this->getBodyClass(); echo ' '.$var_vttheme->template; ?>" >
-            <div id="wechat" style="background-color:red; width:50px; height:30px; position: fixed; right:20px; top:500px;"></div>
+
+        <!-- 微信公众号 -->
+        <div id="wechat" style=" width:100px; height:130px; position: fixed; right:30px; top:50px;" class="">
+        <img src="http://bdbbuy.com/media/vt/wechat.png" style="display:block; float:left width:100px; height:100px">
+            <span style="font-size:12px;display:block;text-align:center;">关注微信公众号</span>
+            <span style="font-size:12px;display:block;text-align:center;">获取最新优惠</span>
+        </div>
+        <!-- 微信公众号 -->
+
         <?php echo $this->getChildHtml('after_body_start') ?>
         <div  id="box-wrapper">
             <?php echo $this->getChildHtml('global_notices') ?>
