微信公众号广告最顶层

--- a/design/frontend/vt-supershop/bdb/template/page/1column.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/1column.phtml
@@ -46,7 +46,7 @@ global $var_vttheme;
     <body class="<?php echo 'layoutfb'.$ls.' '; echo "home-0".$l; echo $this->getBodyClass(); echo ' '.$var_vttheme->template; ?>" >
 
         <!-- 微信公众号 -->
-        <div id="wechat" style=" width:100px; height:130px; position: fixed; right:30px; top:50px;" class="">
+        <div id="wechat" style=" width:100px; height:130px; position: fixed; right:30px; top:50px; z-index:999" class="">
         <img src="http://bdbbuy.com/media/vt/wechat.png" style="display:block; float:left width:100px; height:100px">
             <span style="font-size:12px;display:block;text-align:center;">关注微信公众号</span>
             <span style="font-size:12px;display:block;text-align:center;">获取最新优惠</span>
