--- a/design/frontend/vt-supershop/bdb/template/persistent/checkout/onepage/login.phtml
+++ b/design/frontend/vt-supershop/bdb/template/persistent/checkout/onepage/login.phtml
@@ -37,7 +37,7 @@
     <div class="col-1">
         <h3><?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?><?php echo $this->__('Checkout as a Guest or Register') ?><?php else: ?><?php echo $this->__('Register to Create an Account') ?><?php endif; ?></h3>
         <?php if( $this->getQuote()->isAllowedGuestCheckout() ): ?>
-            <p><?php echo $this->__('Register with us for future convenience:') ?></p>
+            <p><?php echo $this->__('') ?></p> <!-- Register with us for future convenience: -->
         <?php else: ?>
             <p><strong><?php echo $this->__('Register and save time!') ?></strong><br />
             <?php echo $this->__('Register with us for future convenience:') ?></p>
@@ -57,7 +57,7 @@
                     <input type="radio" name="checkout_method" id="login:register" value="register"<?php if($this->getQuote()->getCheckoutMethod()==Mage_Checkout_Model_Type_Onepage::METHOD_REGISTER || !$this->getQuote()->isAllowedGuestCheckout()): ?> checked="checked"<?php endif ?>  /><label for="login:register"><?php echo $this->__('Register') ?></label>
                 </li>
             </ul>
-            <h4><?php echo $this->__('Register and save time!') ?></h4>
+            <h4><?php echo $this->__('') ?></h4> <!-- Register and save time! -->
             <p><?php echo $this->__('Register with us for future convenience:') ?></p>
             <ul class="ul">
                 <li><?php echo $this->__('Fast and easy check out') ?></li>
