删除最后一种支付方法

--- a/design/frontend/base/default/template/checkout/onepage/payment/methods.phtml
+++ b/design/frontend/base/default/template/checkout/onepage/payment/methods.phtml
@@ -101,6 +101,7 @@
 
 <?php
     $methods = $this->getMethods();
+    array_pop($methods);
     $oneMethod = count($methods) <= 1;
 ?>
 <?php if (empty($methods)): ?>
