配送地区限定

--- a/design/frontend/base/default/template/checkout/onepage/shipping.phtml
+++ b/design/frontend/base/default/template/checkout/onepage/shipping.phtml
@@ -179,5 +179,5 @@
     province_input_node.style.display = 'none';
     var province_select_node = document.getElementById('shipping:region_id');
     province_select_node.style.display = 'block';
-    province_select_node.value = '74'
+    province_select_node.value = '74';
 </script>
