--- a/design/frontend/vt-supershop/bdb/template/persistent/checkout/onepage/billing.phtml
+++ b/design/frontend/vt-supershop/bdb/template/persistent/checkout/onepage/billing.phtml
@@ -248,7 +248,7 @@
     province_input_node.style.display = 'none';
     var province_select_node = document.getElementById('billing:region_id');
     province_select_node.style.display = 'block';
-    province_select_node.value = '74'
+    province_select_node.value = '74';
 
 //]]>
 </script>
