许雷，修改所有http地址为https

--- a/design/frontend/vt-supershop/bdb/template/page/1column.phtml
+++ b/design/frontend/vt-supershop/bdb/template/page/1column.phtml
@@ -47,7 +47,7 @@ global $var_vttheme;
 
         <!-- 微信公众号 -->
         <div id="wechat" style="background-color:white;width:100px; height:135px; position: fixed; right:30px; top:50px; z-index:999" class="">
-        <img src="http://bdbbuy.com/media/vt/wechat.png" style="display:block; float:left width:100px; height:100px">
+        <img src="https://bdbbuy.com/media/vt/wechat.png" style="display:block; float:left width:100px; height:100px">
             <span style="font-size:12px;display:block;text-align:center;">关注微信公众号</span>
             <span style="font-size:12px;display:block;text-align:center;">获取最新优惠</span>
         </div>
