--- a/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
+++ b/design/frontend/vt-supershop/bdb/template/vt/slideshow/default.phtml
@@ -15,19 +15,19 @@ $l = $var_vttheme->getParam('layout_home');
 	<div class="box" style="width:100%;height:400px;margin:0px auto;position:relative;">	
 		<div class="pic" style="width:100%;height:400px;overflow:hidden;">
 			<ul>
-				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s1-01.png') center">
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('https://bdbbuy.com/media/wysiwyg/images/slide/bg-s1-01.png') center">
 
 				</li>
-				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s2-01.png') center">
-					<a style="width:100%;height:400px;display:block" href="http://bdbbuy.com/index.php/shippingarea/"></a>
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('https://bdbbuy.com/media/wysiwyg/images/slide/bg-s2-01.png') center">
+					<a style="width:100%;height:400px;display:block" href="https://bdbbuy.com/index.php/shippingarea/"></a>
 				</li>
-				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s3-01.png') center">
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('https://bdbbuy.com/media/wysiwyg/images/slide/bg-s3-01.png') center">
 
 				</li>
-				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s4-01.png') center">
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('https://bdbbuy.com/media/wysiwyg/images/slide/bg-s4-01.png') center">
 
 				</li>
-				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('http://bdbbuy.com/media/wysiwyg/images/slide/bg-s5-01.png') center">
+				<li style="list-style-type:none;width:100%;height:400px;position:relative;overflow:hidden;background:url('https://bdbbuy.com/media/wysiwyg/images/slide/bg-s5-01.png') center">
 
 				</li>
 			</ul>
