pc端强制去掉mobile payment

--- a/design/frontend/base/default/template/checkout/onepage/payment/methods.phtml
+++ b/design/frontend/base/default/template/checkout/onepage/payment/methods.phtml
@@ -101,6 +101,11 @@
 
 <?php
     $methods = $this->getMethods();
+    foreach($methods as $k=>$v){  
+        if($v->getCode() == 'cashondelivery'){  
+            unset($methods[$k]);  
+        }  
+    } 
     array_pop($methods);
     $oneMethod = count($methods) <= 1;
 ?>
